# 2018_beeldinterpretatie_VanAssche_Dylan

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
project/: CMakeLists.txt  combine.cpp  contoursdata.cpp  main.cpp  notes.h  sound.cpp  stafflines.cpp  wavfile.c
project/lib/: wavfile.c  wavfile.h
sessie_0/: CMakeLists.txt  Makefile  README.md  main.cpp
sessie_0/sessie0/: main.cpp  sessie0  sessie0.depend
sessie_1/: CMakeLists.txt  README.md  main.cpp
sessie_1/opdracht_1/: CMakeLists.txt  main.cpp
sessie_1/opdracht_2/: CMakeLists.txt  main.cpp
sessie_2/: CMakeLists.txt  README.md  gimpHSVtoOpencv.py  main.cpp
sessie_3/: README.md
sessie_3/opdracht_1/: CMakeLists.txt  main.cpp
sessie_3/opdracht_2/: CMakeLists.txt  main.cpp
sessie_3/opdracht_extra/: CMakeLists.txt  main.cpp
sessie_4/: README.md
sessie_4/opdracht_1/: CMakeLists.txt  main.cpp  main.h
sessie_4/opdracht_2/: CMakeLists.txt  main.cpp  main.h
sessie_4/opdracht_3/: CMakeLists.txt  main.cpp  main.h
sessie_5/: README.md
sessie_5/opdracht_1/: main.cpp
sessie_5/opdracht_2/: CMakeLists.txt  main.cpp  strawberry.h
sessie_5/opdracht_3/: CMakeLists.txt  main.cpp  strawberry.h
sessie_5/opdracht_4/: CMakeLists.txt  main.cpp  strawberry.h
sessie_5/opdracht_extra/: CMakeLists.txt  main.cpp  strawberry.h
sessie_6/: CMakeLists.txt  README.md  main.cpp
sessie_6/opdracht_1/: CMakeLists.txt  faces.h  main.cpp
sessie_6/opdracht_2/: CMakeLists.txt  faces.h  main.cpp
sessie_6/opdracht_3/: CMakeLists.txt  main.cpp  people.h
sessie_6/opdracht_extra/: CMakeLists.txt  main.cpp  people.h
